--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 
 BOT_TOKEN=your_telegram_bot_token
-MONGO_URI=your_mongodb_connection_string
+MONGO_URI=mongodb+srv://oyysreejan8:r9f3q8OpBE9UdFEv@cluster0.h3mzhuz.mongodb.net/?retryWrites=false&w=majority&appName=Cluster0
+
 PORT=3000
 ADMIN_ID=your_telegram_id
