--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "telegram-keybot",
+  "name": "telegram-firebase-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "dotenv": "^16.4.0",
-    "mongoose": "^7.0.0",
-    "node-telegram-bot-api": "^0.61.0"
+    "node-telegram-bot-api": "^0.61.0",
+    "firebase": "^11.9.1"
   }
 }
