--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-
-BOT_TOKEN=your_telegram_bot_token
-MONGO_URI=mongodb+srv://oyysreejan8:r9f3q8OpBE9UdFEv@cluster0.h3mzhuz.mongodb.net/?retryWrites=false&w=majority&appName=Cluster0
-
-PORT=3000
-ADMIN_ID=your_telegram_id
+BOT_TOKEN=8216808317:AAHhpWkwf7TlpLO0eQZmEGQeHH49llaupZ0
+ADMIN_ID=7616539095
