--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "bot.js",
   "type": "module",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "firebase": "^11.9.1",
-    "node-telegram-bot-api": "^0.66.0"
+    "mongoose": "^7.0.0",
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
