--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 BOT_TOKEN=8216808317:AAHhpWkwf7TlpLO0eQZmEGQeHH49llaupZ0
 ADMIN_ID=7616539095
+MONGO_URL=mongodb+srv://mrrabbit:mrrabbit@cluster0.we4bxzg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+QR_IMAGE=https://files.catbox.moe/pfnulr.png
