--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "telegram-deposit-bot",
   "version": "1.0.0",
+  "description": "Professional Telegram Deposit Bot (Safe & Updated)",
   "main": "bot.js",
-  "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "mongoose": "^7.0.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.7.0",
     "node-telegram-bot-api": "^0.61.0"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
