--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "telegram-deposit-bot",
   "version": "1.0.0",
-  "description": "Telegram bot with deposit, referral, and transaction system",
+  "description": "Telegram bot with deposit, referral, key system, and 24/7 uptime",
   "main": "bot.js",
   "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
-  "keywords": [
-    "telegram",
-    "bot",
-    "deposit",
-    "referral",
-    "mongodb"
-  ],
-  "author": "YourName",
-  "license": "MIT",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.7.0",
+    "mongoose": "^7.7.1",
     "node-telegram-bot-api": "^0.61.0"
   }
 }
